# simpleclinicv4

./: SimpleClinic.spec  build_app_windows.bat  build_demo_windows.bat  config.py  enums.py  init.py  main.py  paths.py  printer.py  pyproject.toml
app/: mainview.py  menubar.py
app/dialogs/: find_patient_dialog.py  patient_dialog.py  procedure_dialog.py  report_dialog.py  sample_prescription_dialog.py  setup_dialog.py  warehouse_dialog.py
app/generics/: dialogs.py  listctrls.py
app/mainview_widgets/: buttons.py  patient_book.py  visit_list.py  widgets.py
app/mainview_widgets/order_book/: order_book.py
app/mainview_widgets/order_book/prescription_page/: buttons.py  page.py  picker.py  widgets.py
app/mainview_widgets/order_book/procedure_page/: buttons.py  page.py  picker.py  widgets.py
database/: connection.py  models.py  output_sql.py  sql.py
static/: default_config.toml
