[project]
name = "simpleclinic"
version = "4.0.0"
description = "Phần mềm phòng khám Simple Clinic"
readme = "README.md"
license = "MIT"
authors = [{ name = "vuongkienthanh", email = "thanhstardust@outlook.com" }]
urls = { repository = "https://github.com/vuongkienthanh/SimpleClinic" }
requires-python = ">=3.13"


dependencies = ["wxpython"]

[dependency-groups]
dev = ["pyinstaller>=6.14.2"]

[tool.ruff]
ignore-init-module-imports = true
extend-exclude = ["**/__init__.py"]
ignore = ["E501"]
unfixable = ["F401"]

[tool.uv.sources]
wxpython = [
    { url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxpython-4.2.3-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
